--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,7 +18,8 @@ redirect_stderr=true
 [program:bot]
 command=python3 bot.py
 autostart=true
-autorestart=true
+autorestart=false
+startretries=0
 stdout_logfile=/app/logs/bot.log
 stderr_logfile=/app/logs/bot_err.log
 redirect_stderr=true
