--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,7 +17,7 @@ redirect_stderr=true
 
 [program:bot]
 command=python3 bot.py
-autostart=true
+autostart=false
 autorestart=false
 startretries=0
 stdout_logfile=/app/logs/bot.log
