--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,8 +9,8 @@ user=root
 
 [program:web]
 command=gunicorn app:app -b 0.0.0.0:5000
-autostart=true
-autorestart=true
+autostart=false
+autorestart=false
 stdout_logfile=/app/logs/web.log
 stderr_logfile=/app/logs/web_err.log
 redirect_stderr=true
