--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,15 +9,15 @@ user=root
 
 [program:web]
 command=gunicorn app:app -b 0.0.0.0:5000
-autostart=false
-autorestart=false
+autostart=true
+autorestart=true
 stdout_logfile=/app/logs/web.log
 stderr_logfile=/app/logs/web_err.log
 redirect_stderr=true
 
 [program:bot]
 command=python3 bot.py
-autostart=false
+autostart=true
 autorestart=false
 startretries=0
 stdout_logfile=/app/logs/bot.log
